# edgeai-robotics-sdk

./: CHANGELOG.md  README.md  init_setup.sh  manifest.html  robotics_sdk_intro.md
.github/workflows/: docker-build-pc.yml  docker-build-stage1.yml  docker-build-stage2.yml
cmake/: common_platform.cmake  ros2_common.cmake  ti_core_common.cmake
docker/: Dockerfile.arm64.humble  Dockerfile.arm64.ti_libs  Dockerfile.arm64v8.humble  Dockerfile.arm64v8.ti_libs  Dockerfile.viz.humble  Dockerfile.x86_64.humble  Makefile  README.md  entrypoint_arm64.sh  entrypoint_arm64v8.sh  entrypoint_viz.sh  install_gst_v4l2_lib.sh  install_osrt.sh  install_osrt_libs.sh  install_tidl_libs.sh  install_vision_apps_lib.sh  ros_setup.sh  set_aliases.sh  setting_docker_ros1.md  setting_docker_ros2.md  setup_ti_processor_sdk.sh
docker/scripts/: detect_soc.sh  prepare_docker_build.sh
docs/: known_issues.md  performance_report_am62a.md  performance_report_j7x.md  radar_driver_node_ros2.md  sdk_components.md
docs_sphinx/: README.md  gen_html.sh  mono_camera.rst  requirements.txt  stereo_camera.rst
docs_sphinx/am62a/: community_nodes.rst  conf.py  index.rst  mmwave_radar.rst
docs_sphinx/j7x/: community_nodes.rst  conf.py  index.rst  mmwave_radar.rst
ros1/drivers/mono_capture/: README.md
ros1/drivers/patches/: gscam_ti_nv12.patch
ros1/nodes/ti_estop/: README.md
ros1/nodes/ti_estop/config/: params.yaml
ros1/nodes/ti_objdet_range/: README.md
ros1/nodes/ti_objdet_range/launch/: objdet_range.launch
ros1/nodes/ti_sde/: README.md
ros1/nodes/ti_sde/config/: params.yaml
ros1/nodes/ti_vision_cnn/: README.md  README_6D_pose.md  README_objdet.md
ros1/nodes/ti_vision_cnn/launch/: gscam_objdet_cnn.launch  gscam_objdet_cnn_imx219.launch  gscam_objdet_cnn_imx390.launch  mono_objdet_cnn.launch  objdet_cnn.launch
ros1/nodes/ti_vl/: README.md
ros1/nodes/ti_vl/config/: params.yaml
ros2/drivers/mono_capture/: CMakeLists.txt  README.md
ros2/drivers/mono_capture/launch/: mono_capture_launch.py
ros2/drivers/mono_capture/src/: mono_capture_node.cpp
ros2/drivers/patches/: gscam2_ti_nv12.patch
ros2/drivers/zed_capture/: CMakeLists.txt  README.md
ros2/drivers/zed_capture/launch/: zed_capture_launch.py  zed_capture_remap_launch.py
ros2/drivers/zed_capture/src/: zed_capture_node.cpp
ros2/msgs/common_msgs/: CMakeLists.txt  package.xml
ros2/msgs/common_msgs/msg/: BoundingBox2Dpva.msg  Detection2D.msg  Detection2Dp.msg  Detection2Dpva.msg  HumanPose.msg  Pose6D.msg  Transform.msg
ros2/nodes/ti_estop/: README.md
ros2/nodes/ti_estop/config/: params.yaml
ros2/nodes/ti_estop/launch/: estop_launch.py  zed_estop_launch.py
ros2/nodes/ti_estop/src/: estop_main.cpp  estop_node.cpp  estop_node.h
ros2/nodes/ti_estop/test/: estop_golden_ref_check.py  estop_record_rosbags.sh
ros2/nodes/ti_objdet_radar/: CMakeLists.txt  README.md  package.xml
ros2/nodes/ti_objdet_radar/launch/: bag_objdet_radar_launch.py  gscam_mmwave_launch.py  gscam_mmwave_objdet_radar_launch.py  objdet_radar_launch.py  rosbag_play_launch.py
ros2/nodes/ti_objdet_radar/src/: objdet_radar.h  objdet_radar_fusion.cpp
ros2/nodes/ti_objdet_range/: CMakeLists.txt  README.md  package.xml
ros2/nodes/ti_objdet_range/launch/: bag_objdet_range_launch.py  objdet_range_launch.py  zed_objdet_range_launch.py
ros2/nodes/ti_objdet_range/src/: objdet_disparity.h  objdet_disparity_fusion.cpp
ros2/nodes/ti_ros_gst_plugins/: CMakeLists.txt  README.md  package.xml
ros2/nodes/ti_ros_gst_plugins/src/: gsttiros.cpp  gsttirosimgsrc.cpp  gsttirosimgsrc.h  gsttirossink.cpp  gsttirossink.h  gsttirosutils.cpp  gsttirosutils.h
ros2/nodes/ti_sde/: README.md
ros2/nodes/ti_sde/config/: params.yaml
ros2/nodes/ti_sde/launch/: sde_launch.py  sde_pcl_launch.py  zed_sde_launch.py  zed_sde_pcl_launch.py
ros2/nodes/ti_sde/src/: sde_main.cpp  sde_node.cpp  sde_node.h
ros2/nodes/ti_sde/test/: sde_golden_ref_check.py  sde_pcl_golden_ref_check.py  sde_pcl_record_rosbags.sh  sde_record_rosbags.sh
ros2/nodes/ti_vision_cnn/: README.md  README_6D_pose.md  README_humanpose.md  README_objdet.md
ros2/nodes/ti_vision_cnn/config/: params.yaml
ros2/nodes/ti_vision_cnn/launch/: bag_6dpose_cnn_launch.py  bag_humanpose_cnn_launch.py  bag_objdet_cnn_launch.py  bag_semseg_cnn_launch.py  gscam_6dpose_cnn_launch.py  gscam_humanpose_cnn_launch.py  gscam_objdet_cnn_imx219_launch.py  gscam_objdet_cnn_imx390_launch.py  gscam_objdet_cnn_launch.py  gscam_semseg_cnn_imx219_launch.py  gscam_semseg_cnn_imx390_launch.py  gscam_semseg_cnn_launch.py  humanpose_cnn_launch.py  mono_6dpose_cnn_launch.py  mono_objdet_cnn_launch.py  mono_semseg_cnn_launch.py  objdet_cnn_launch.py  pose6d_cnn_launch.py  semseg_cnn_launch.py  (+2 more)
ros2/nodes/ti_viz_nodes/: CMakeLists.txt  package.xml
ros2/nodes/ti_vl/: CMakeLists.txt  README.md
scripts/: download_models.sh  install_gscam.sh  install_mmwave_rospkg.sh
ti_core/: CMakeLists.txt
ti_core/common/include/: cm_common.h  cm_post_process_humanpose.h  cm_post_process_pose6D.h
ti_core/common/src/: cm_common.cpp  cm_post_process_humanpose.cpp  cm_post_process_image.cpp  cm_post_process_pose6D.cpp  cm_pre_process_image.cpp  cm_remote_service.cpp
ti_core/ti_estop/include/: estop.h
ti_core/ti_estop/src/: estop.cpp  estop_manage_graph.cpp
ti_core/ti_sde/src/: sde.cpp  sde_manage_graph.cpp
ti_core/ti_vision_cnn/include/: vision_cnn.h
ti_core/ti_vision_cnn/src/: vision_cnn.cpp  vision_cnn_manage_graph.cpp
ti_core/ti_vl/include/: visloc.h
ti_core/ti_vl/src/: visloc.cpp  visloc_manage_graph.cpp
tools/camera_info/: IMX219_HD_camera_info.yaml  SN18059.conf  SN18059_FHD2_camera_info_left.yaml  SN18059_FHD2_camera_info_right.yaml  SN18059_FHD_camera_info_left.yaml  SN18059_FHD_camera_info_right.yaml  SN18059_HD2_camera_info_left.yaml  SN18059_HD2_camera_info_right.yaml  SN18059_HD_camera_info_left.yaml  SN18059_HD_camera_info_right.yaml
tools/mono_camera/: calib_c920.sh  generate_rect_map_mono.py  imx390_ldc.sh  requirements.txt
tools/stereo_camera/: requirements.txt
tools/stereo_camera/calibration/: README.md
(+46 files in other folders)
