<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>ti_objdet_radar</name>
  <version>0.1.0</version>
  <description>
    The ti_objdet_radar package
  </description>
  <maintainer email="jroh@ti.com">JuneChul Roh</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>common_msgs</depend>
  <depend>ti_mmwave_rospkg_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
